--- a/test.html
+++ b/test.html
@@ -166,24 +166,29 @@ How do you feel about anger?
     &lt;&lt;goto &#39;Anger avoidant&#39;&gt;&gt;
 &lt;&lt;/link&gt;&gt;
 
-&lt;&lt;link &quot;I avoid being angry because its pointless&quot; &quot;Anger avoidant&quot;&gt;&gt;
+&lt;&lt;link &quot;I avoid being angry because its pointless&quot;&gt;&gt;
     &lt;&lt;run trackDecision(&quot;I avoid being angry because its pointless&quot;)&gt;&gt;
+    &lt;&lt;goto &#39;Anger avoidant&#39;&gt;&gt;
 &lt;&lt;/link&gt;&gt;
 
-&lt;&lt;link &quot;I am afraid of being angry because I may lose control of myself&quot; &quot;Anger avoidant&quot;&gt;&gt;
+&lt;&lt;link &quot;I am afraid of being angry because I may lose control of myself&quot;&gt;&gt;
     &lt;&lt;run trackDecision(&quot;I am afraid of being angry because I may lose control of myself&quot;)&gt;&gt;
+    &lt;&lt;goto &#39;Anger avoidant&#39;&gt;&gt;
 &lt;&lt;/link&gt;&gt;
 
-&lt;&lt;link &quot;I have seen people get angry and I never want to be like that so I avoid anger&quot; &quot;Anger avoidant&quot;&gt;&gt;
+&lt;&lt;link &quot;I have seen people get angry and I never want to be like that so I avoid anger&quot;&gt;&gt;
     &lt;&lt;run trackDecision(&quot;I have seen people get angry and I never want to be like that so I avoid anger&quot;)&gt;&gt;
+    &lt;&lt;goto &#39;Anger avoidant&#39;&gt;&gt;
 &lt;&lt;/link&gt;&gt;
 
-&lt;&lt;link &quot;I allow myself to feel anger but I take no action when feeling anger&quot; &quot;Anger accepting&quot;&gt;&gt;
+&lt;&lt;link &quot;I allow myself to feel anger but I take no action when feeling anger&quot;&gt;&gt;
     &lt;&lt;run trackDecision(&quot;I allow myself to feel anger but I take no action when feeling anger&quot;)&gt;&gt;
+    &lt;&lt;goto &#39;Anger accepting&#39;&gt;&gt;
 &lt;&lt;/link&gt;&gt;
 
-&lt;&lt;link &quot;I am comfortable with experiencing anger whenever it comes up and just sitting with it&quot; &quot;Anger accepting&quot;&gt;&gt;
+&lt;&lt;link &quot;I am comfortable with experiencing anger whenever it comes up and just sitting with it&quot;&gt;&gt;
     &lt;&lt;run trackDecision(&quot;I am comfortable with experiencing anger whenever it comes up and just sitting with it&quot;)&gt;&gt;
+     &lt;&lt;goto &#39;Anger accepting&#39;&gt;&gt;
 &lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="Anger avoidant" tags="A-list-of-things" position="625,75" size="100,100">It seems you are uncomfortable allowing yourself to experience anger.
 
 When things are out of our control, one of the most common emotions to come up is anger. People usually like being in control (independence) and they hate it when they lose it. 
@@ -245,7 +250,7 @@ You are making excellent progress having reached this point.
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  V-git-jshead+link                 ║
+║                  V-git-jshead+links                 ║
 ║                    back to orig in passage                    ║
 ║                 [[Anger]]                  ║
 ║                                        ║
