--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 (function(){
     var gaScript = document.createElement('script');
     gaScript.async = true;
-    gaScript.src = 'https://www.googletagmanager.com/gtag/js?id=G-73ZBHD5RXL';
+    gaScript.src = 'https://www.googletagmanager.com/gtag/js?id=G-QEECZ258JX';
     document.head.appendChild(gaScript);
 
     window.dataLayer = window.dataLayer || [];
@@ -131,7 +131,7 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
     window.gtag = gtag;
     gtag('js', new Date());
 
-    gtag('config', 'G-73ZBHD5RXL');
+    gtag('config', 'G-QEECZ258JX');
 })();
 
 window.trackDecision = function(decisionLabel) {       
@@ -248,8 +248,8 @@ You are making excellent progress having reached this point.
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  V-git-jshead+links                 ║
-║                    back to orig in passage                    ║
+║                  V-endpain                ║
+║                                                    ║
 ║                 [[Anger]]                  ║
 ║                                        ║
 ║                                        ║
