--- a/index.html
+++ b/index.html
@@ -121,12 +121,14 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 }
 
 body {
-  background-color: white;
-    color: darkgray;
+  background-color: black;
+    color: white;
   font-family: futura, impact, helvetica, sans-serif;
-  font-size: 150%   
+  font-size: 100%   
 }
 
+
+/*
 a {
   color: Tomato;
 }
@@ -135,7 +137,6 @@ a.hover {
   color: Crimson;
   border-bottom: 5px solid blue;
   text-decoration: none;
-  
 }
 
 .A-list-of-things {
@@ -147,8 +148,8 @@ a.A-list-of-things {
     color: black;
 }
 
-#ui.bar {
-  display: none;
+#ui-bar {
+    display: none;
 }
 
 #story {
@@ -159,7 +160,7 @@ a.A-list-of-things {
   opacity: 0;
   transition: 2s all ease;
 }
-
+*/
 
 
 
