--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body {
   background-color: black;
     color: white;
   font-family: futura, impact, helvetica, sans-serif;
-  font-size: 100%   
+  font-size: 120%   
 }
 
 
@@ -296,7 +296,7 @@ You are making excellent progress having reached this point.
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  V-endpain                ║
+║                  V-css120                ║
 ║                                                    ║
 ║                 [[Anger]]                  ║
 ║                                        ║
