--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@ body {
     color: white;
   font-family: futura, impact, helvetica, sans-serif;
   font-size: 150%   
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 
@@ -296,7 +298,7 @@ You are making excellent progress having reached this point.
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  V-css150                ║
+║                  V-cssjust                ║
 ║                                                    ║
 ║                 [[Anger]]                  ║
 ║                                        ║
