--- a/index.html
+++ b/index.html
@@ -121,16 +121,19 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 }
 
 body {
+background-image: url("time small.jpg");
+}
+
+/*
+body {
   background-color: black;
     color: white;
-  font-family: futura, impact, helvetica, sans-serif;
+  font-family: Garamond;
   font-size: 150%   
   text-align: justify;
   text-justify: inter-word;
 }
 
-
-/*
 a {
   color: Tomato;
 }
