--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 }
 
 body {
-background-image: url("time small.jpg");
+background-image: url("darknight.webp");
 }
 
 /*
@@ -301,7 +301,7 @@ You are making excellent progress having reached this point.
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  V-cssjust                ║
+║                  V-image                ║
 ║                                                    ║
 ║                 [[Anger]]                  ║
 ║                                        ║
