with respo images

--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@ window.trackDecision = function(decisionLabel) {
 };
 
 
-</script><tw-tag name="Recap" color="green"></tw-tag><tw-tag name="Emotions-table" color="red"></tw-tag><tw-tag name="List-of-diagnosis" color="orange"></tw-tag><tw-tag name="Personality-traits" color="blue"></tw-tag><tw-tag name="Stressors-list" color="purple"></tw-tag><tw-tag name="A-list-of-things" color="orange"></tw-tag><tw-passagedata pid="1" name="Anger" tags="" position="350,150" size="100,100">&lt;img src=&quot;intentional.jpeg&quot; alt=&quot;intentional&quot;&gt;
+</script><tw-tag name="Recap" color="green"></tw-tag><tw-tag name="Emotions-table" color="red"></tw-tag><tw-tag name="List-of-diagnosis" color="orange"></tw-tag><tw-tag name="Personality-traits" color="blue"></tw-tag><tw-tag name="Stressors-list" color="purple"></tw-tag><tw-tag name="A-list-of-things" color="orange"></tw-tag><tw-passagedata pid="1" name="Anger" tags="" position="350,150" size="100,100">&lt;img src=&quot;intentional.jpeg&quot; alt=&quot;intentional&quot; style=&quot;max-width: 100%; height: auto;&quot;&gt;
+
 
 Excellent.
 
