with 2 respo images

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ How do you feel about anger?
 &lt;&lt;link &quot;I am comfortable with experiencing anger whenever it comes up and just sitting with it&quot;&gt;&gt;
     &lt;&lt;run trackDecision(&quot;I am comfortable with experiencing anger whenever it comes up and just sitting with it&quot;)&gt;&gt;
      &lt;&lt;goto &#39;Anger accepting&#39;&gt;&gt;
-&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="Anger avoidant" tags="A-list-of-things" position="625,75" size="100,100">&lt;img src=&quot;intentional2.jpeg&quot; alt=&quot;intentional&quot;&gt;
+&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="Anger avoidant" tags="A-list-of-things" position="625,75" size="100,100">&lt;img src=&quot;intentional2.jpeg&quot; alt=&quot;intentional&quot; style=&quot;max-width: 100%; height: auto;&quot;&gt;
 
 
 It seems you are uncomfortable allowing yourself to experience anger.
