--- a/index.html
+++ b/index.html
@@ -220,10 +220,7 @@ window.trackDecision = function(decisionLabel) {
 };
 
 
-</script><tw-tag name="Recap" color="green"></tw-tag><tw-tag name="Emotions-table" color="red"></tw-tag><tw-tag name="List-of-diagnosis" color="orange"></tw-tag><tw-tag name="Personality-traits" color="blue"></tw-tag><tw-tag name="Stressors-list" color="purple"></tw-tag><tw-tag name="A-list-of-things" color="orange"></tw-tag><tw-passagedata pid="1" name="Anger" tags="" position="350,150" size="100,100">&lt;img src=&quot;intentional.jpeg&quot; alt=&quot;intentional&quot; style=&quot;max-width: 100%; height: auto;&quot;&gt;
-
-
-Excellent.
+</script><tw-tag name="Recap" color="green"></tw-tag><tw-tag name="Emotions-table" color="red"></tw-tag><tw-tag name="List-of-diagnosis" color="orange"></tw-tag><tw-tag name="Personality-traits" color="blue"></tw-tag><tw-tag name="Stressors-list" color="purple"></tw-tag><tw-tag name="A-list-of-things" color="orange"></tw-tag><tw-passagedata pid="1" name="Anger" tags="" position="350,150" size="100,100">Excellent.
 
 It&#39;s good that you have experienced all of these emotions at some point or that you are open to experiencing them. 
 
@@ -263,10 +260,7 @@ How do you feel about anger?
 &lt;&lt;link &quot;I am comfortable with experiencing anger whenever it comes up and just sitting with it&quot;&gt;&gt;
     &lt;&lt;run trackDecision(&quot;I am comfortable with experiencing anger whenever it comes up and just sitting with it&quot;)&gt;&gt;
      &lt;&lt;goto &#39;Anger accepting&#39;&gt;&gt;
-&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="Anger avoidant" tags="A-list-of-things" position="625,75" size="100,100">&lt;img src=&quot;intentional2.jpeg&quot; alt=&quot;intentional&quot; style=&quot;max-width: 100%; height: auto;&quot;&gt;
-
-
-It seems you are uncomfortable allowing yourself to experience anger.
+&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="Anger avoidant" tags="A-list-of-things" position="625,75" size="100,100">It seems you are uncomfortable allowing yourself to experience anger.
 
 When things are out of our control, one of the most common emotions to come up is anger. People usually like being in control (independence) and they hate it when they lose it. 
 
@@ -327,7 +321,7 @@ You are making excellent progress having reached this point.
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  Vl story menu                ║
+║                  Vm story menu                ║
 ║                                                    ║
 ║                 [[Anger]]                  ║
 ║                                        ║
