--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ tw-passage {
     max-width: 800px; /* Ideal for larger screens */
     margin: 0 auto; /* Centers the text */
     padding: 10px; /* Adds spacing inside the passage */
-    font-size: 18px; /* Default font size for readability */
+    font-size: 24px; /* Default font size for readability */
 }
 
 a {
@@ -321,7 +321,7 @@ You are making excellent progress having reached this point.
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  Vn story menu                ║
+║                  Vo story menu                ║
 ║                                                    ║
 ║                 [[Anger]]                  ║
 ║                                        ║
