--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ a:hover {
     }
 
     tw-passage {
-        font-size: 30px; /* Slightly larger font size for large screens */
+        font-size: 24px; /* Slightly larger font size for large screens */
     }
 }
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">$(document).one(":passagedisplay", function () {
@@ -321,7 +321,7 @@ You are making excellent progress having reached this point.
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  Vo story menu                ║
+║                  Vp story menu                ║
 ║                                                    ║
 ║                 [[Anger]]                  ║
 ║                                        ║
