--- a/index.html
+++ b/index.html
@@ -104,7 +104,32 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="Healyourpain Testing" startnode="4" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="14f39ac7-a41a-4789-9961-21d7a2918d8a" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">/* Universal Styling (Applies to Both Desktop and Mobile) */
+	<tw-storydata name="Healyourpain Testing" startnode="4" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="14f39ac7-a41a-4789-9961-21d7a2918d8a" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">/* Style the main menu bar (on the left in SugarCube) */
+#ui-bar {
+    background-color: #f7e7ce; /* Light parchment-like color */
+    color: black; /* Black text */
+    border: 1px solid #b0976d; /* Optional: a border to match your theme */
+}
+
+/* Style the links in the menu */
+#menu li {
+    color: black; /* Menu text color */
+}
+
+#menu a {
+    color: #7e5e31; /* Dark brown for menu links */
+    text-decoration: none;
+}
+
+#menu a:hover {
+    color: #d4a761; /* Lighter golden color on hover */
+    text-decoration: underline;
+}
+
+
+
+
+/* Universal Styling (Applies to Both Desktop and Mobile) */
 body {
     background-color: #f7e7ce; /* Fallback background color */
     background-image: url('parchment2.jpeg'); /* Parchment background image */
