--- a/index.html
+++ b/index.html
@@ -106,38 +106,50 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 	</div>
 	<tw-storydata name="Healyourpain Testing" startnode="4" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="14f39ac7-a41a-4789-9961-21d7a2918d8a" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">/* Style the main menu bar (on the left in SugarCube) */
 #ui-bar {
-    background-color: #f7e7ce; /* Light parchment-like color to match the theme */
-    color: black; /* Black text */
-    border: 1px solid #b0976d; /* Optional border to match your theme */
+    background-color: #f7e7ce; /* Light parchment color */
+    color: black;
+    border: 1px solid #b0976d;
 }
 
-/* Style the individual menu buttons */
+/* Style the menu links */
 #menu li {
-    color: black; /* Black text for readability */
-    font-weight: bold; /* Make the text bolder for better visibility */
+    color: black;
+    font-weight: bold;
 }
 
 #menu a {
-    color: black; /* Black for the text inside the buttons */
-    background-color: rgba(255, 255, 255, 0.8); /* Light background for buttons */
-    border: 1px solid #7e5e31; /* Optional: dark brown border for buttons */
-    padding: 10px 15px; /* Add some padding for larger clickable areas */
-    display: block; /* Make the button full width */
-    text-align: center; /* Center the text */
-    text-decoration: none; /* Remove the underline from the links */
-    border-radius: 5px; /* Rounded corners for buttons */
+    color: black;
+    background-color: rgba(255, 255, 255, 0.9); /* Light background */
+    border: 1px solid #7e5e31;
+    padding: 10px 15px;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    opacity: 1; /* Ensure full opacity */
 }
 
+/* Hover state for menu buttons */
 #menu a:hover {
-    background-color: #d4a761; /* Darker golden background on hover */
-    color: white; /* White text on hover for contrast */
-    text-decoration: underline; /* Add underline on hover for feedback */
+    background-color: #d4a761; /* Darker golden color on hover */
+    color: white; /* White text on hover */
 }
 
-/* Ensure the buttons aren't too transparent */
-#menu a {
-    opacity: 1; /* Ensure full opacity for menu items */
+/* Style for disabled buttons */
+#menu a[aria-disabled="true"] {
+    color: #b0b0b0; /* Gray text for disabled state */
+    background-color: #f0f0f0; /* Light gray background for disabled buttons */
+    border: 1px solid #d0d0d0; /* Lighter border */
+    cursor: not-allowed; /* Show disabled cursor */
+    opacity: 0.7; /* Slightly faded */
 }
+
+/* Active/Enabled button styles */
+#menu a[aria-disabled="false"] {
+    color: black; /* Ensure text is black for active buttons */
+    opacity: 1; /* Make sure enabled buttons are fully opaque */
+}
+
 
 
 
@@ -360,7 +372,7 @@ You are making excellent progress having reached this point.
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  Vq story menu                ║
+║                  Vr story menu                ║
 ║                                                    ║
 ║                 [[Anger]]                  ║
 ║                                        ║
