--- a/index.html
+++ b/index.html
@@ -104,7 +104,16 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="Healyourpain Testing" startnode="4" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="14f39ac7-a41a-4789-9961-21d7a2918d8a" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
+	<tw-storydata name="Healyourpain Testing" startnode="4" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="14f39ac7-a41a-4789-9961-21d7a2918d8a" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">/* Style the main menu bar (on the left in SugarCube) */
+#ui-bar {
+    background-image: url('parchment1.jpeg'); /* Replace with your image path */
+    background-size: cover; /* Ensure the image covers the entire menu */
+    background-position: center; /* Center the image */
+    color: black; /* Ensure text is black for readability */
+    border: 1px solid #b0976d; /* Optional: a border to match your theme */
+}
+
+
 /* Universal Styling (Applies to Both Desktop and Mobile) */
 body {
     background-color: #f7e7ce; /* Fallback background color */
@@ -322,7 +331,7 @@ You are making excellent progress having reached this point.
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  Vs story menu                ║
+║                  Vt story menu                ║
 ║                                                    ║
 ║                 [[Anger]]                  ║
 ║                                        ║
