--- a/index.html
+++ b/index.html
@@ -392,7 +392,9 @@ You are making excellent progress having reached this point.
   &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Compulsive&lt;/label&gt;
 &lt;/div&gt;
 
-</tw-passagedata><tw-passagedata pid="9" name="Cover" tags="" position="125,25" size="100,100">&lt;div style=&quot;position: relative; text-align: center; display: inline-block;&quot;&gt;
+</tw-passagedata><tw-passagedata pid="9" name="Cover" tags="" position="125,25" size="100,100">V1
+
+&lt;div style=&quot;position: relative; text-align: center; display: inline-block;&quot;&gt;
     &lt;!-- Image --&gt;
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
@@ -409,7 +411,7 @@ You are making excellent progress having reached this point.
     /* Glowing button */
     .glow-button {
         position: absolute;
-        bottom: 20px; /* Adjust this value to move the button up/down */
+        bottom: 50px; /* Adjust this value to move the button up/down */
         left: 50%;
         transform: translateX(-50%);
         padding: 15px 30px;
