--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ You are making excellent progress having reached this point.
   &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Compulsive&lt;/label&gt;
 &lt;/div&gt;
 
-</tw-passagedata><tw-passagedata pid="9" name="Cover" tags="" position="125,25" size="100,100">V1.1
+</tw-passagedata><tw-passagedata pid="9" name="Cover" tags="" position="125,25" size="100,100">V1.2  #3498db
 
 &lt;div style=&quot;position: relative; text-align: center; display: inline-block;&quot;&gt;
     &lt;!-- Image --&gt;
@@ -411,13 +411,13 @@ You are making excellent progress having reached this point.
     /* Glowing button */
     .glow-button {
         position: absolute;
-        bottom: 200px; /* Adjust this value to move the button up/down */
+        bottom: 150px; /* Adjust this value to move the button up/down */
         left: 50%;
         transform: translateX(-50%);
-        padding: 15px 30px;
+        padding: 10px 20px;
         font-size: 18px;
         color: white;
-        background-color: #3498db;
+        background-color: #D4AF37;
         text-decoration: none;
         border-radius: 5px;
         box-shadow: 0 0 15px rgba(0, 191, 255, 0.75), 0 0 15px rgba(0, 191, 255, 0.75);
