--- a/index.html
+++ b/index.html
@@ -392,9 +392,7 @@ You are making excellent progress having reached this point.
   &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Compulsive&lt;/label&gt;
 &lt;/div&gt;
 
-</tw-passagedata><tw-passagedata pid="9" name="Cover" tags="" position="125,25" size="100,100">V1.2  #3498db
-
-&lt;div style=&quot;position: relative; text-align: center; display: inline-block;&quot;&gt;
+</tw-passagedata><tw-passagedata pid="9" name="Cover" tags="" position="125,25" size="100,100">&lt;div style=&quot;position: relative; text-align: center; display: inline-block;&quot;&gt;
     &lt;!-- Image --&gt;
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
@@ -417,7 +415,7 @@ You are making excellent progress having reached this point.
         padding: 10px 20px;
         font-size: 18px;
         color: white;
-        background-color: #D4AF37;
+        background-color: #3498db;
         text-decoration: none;
         border-radius: 5px;
         box-shadow: 0 0 15px rgba(0, 191, 255, 0.75), 0 0 15px rgba(0, 191, 255, 0.75);
@@ -435,6 +433,9 @@ You are making excellent progress having reached this point.
         height: auto;
     }
 &lt;/style&gt;
+</tw-passagedata><tw-passagedata pid="10" name="Notes" tags="" position="900,375" size="100,100">#3498db blue
+#D4AF37 golden parchment
+
 </tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
