--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ You are making excellent progress having reached this point.
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;a href=&quot;javascript:void(0);&quot; class=&quot;glow-button&quot; onclick=&quot;SugarCube.Engine.goTo(&#39;Title Page&#39;);&quot;&gt;BEGIN&lt;/a&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN&quot;&gt;&gt;&lt;&lt;goto &quot;Title Page&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
