--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ You are making excellent progress having reached this point.
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN&quot;&gt;&gt;&lt;&lt;goto &quot;Title Page&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;Begin&quot;&gt;&gt;&lt;&lt;goto &quot;Title Page&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -409,7 +409,7 @@ You are making excellent progress having reached this point.
     /* Glowing button */
     .glow-button {
         position: absolute;
-        bottom: 150px; /* Adjust this value to move the button up/down */
+        bottom: 50px; /* Adjust this value to move the button up/down */
         left: 50%;
         transform: translateX(-50%);
         padding: 10px 20px;
