--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ You are making excellent progress having reached this point.
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEgin&quot;&gt;&gt;&lt;&lt;goto &quot;Title Page&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;Begin&quot;&gt;&gt;&lt;&lt;goto &quot;Title Page&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -414,8 +414,8 @@ You are making excellent progress having reached this point.
         transform: translateX(-50%);
         padding: 10px 20px;
         font-size: 18px;
-        color: white;
-        background-color: #3498db;
+        color: white !important;
+        background-color: #D4AF37;
         text-decoration: none;
         border-radius: 5px;
         box-shadow: 0 0 15px rgba(0, 191, 255, 0.75), 0 0 15px rgba(0, 191, 255, 0.75);
