--- a/index.html
+++ b/index.html
@@ -343,6 +343,10 @@ Which reminds me of a famous saying &quot;Whatever you resist persists.&quot; So
 
 You are making excellent progress having reached this point. 
 
+&lt;video width=&quot;640&quot; height=&quot;360&quot; controls&gt;
+  &lt;source src=&quot;testvideobachata.mp4&quot; type=&quot;video/mp4&quot;&gt;
+  Your browser does not support the video tag.
+&lt;/video&gt;
 
 
 
@@ -397,7 +401,7 @@ You are making excellent progress having reached this point.
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN&quot;&gt;&gt;&lt;&lt;goto &quot;Title Page&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;Begin&quot;&gt;&gt;&lt;&lt;goto &quot;Title Page&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
