--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ Which reminds me of a famous saying &quot;Whatever you resist persists.&quot; So
 
 You are making excellent progress having reached this point. 
 
-&lt;video width=&quot;640&quot; height=&quot;360&quot; controls&gt;
+&lt;video width=&quot;640&quot; height=&quot;360&quot; controls style=&quot;border: 5px solid #3498db; border-radius: 10px; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);&quot;&gt;
   &lt;source src=&quot;testvideobachata.mp4&quot; type=&quot;video/mp4&quot;&gt;
   Your browser does not support the video tag.
 &lt;/video&gt;
